// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box default 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  margin-top: 1.25rem;
}

<div
  className="c0"
>
  🥑
</div>
`;

exports[`Box supports background-color 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  background-color: #64518A;
}

<div
  className="c0"
/>
`;

exports[`Box supports borders 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border: 1px solid black;
}

<div
  className="c0"
/>
`;

exports[`Box supports borders 2`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border-radius: 4px;
}

<div
  className="c0"
/>
`;

exports[`Box supports display 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  display: inline-block;
}

<div
  className="c0"
/>
`;

exports[`Box supports height properties 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  height: 1vh;
}

<div
  className="c0"
/>
`;

exports[`Box supports height properties 2`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  max-height: 1vh;
}

<div
  className="c0"
/>
`;

exports[`Box supports height properties 3`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  min-height: 1vh;
}

<div
  className="c0"
/>
`;

exports[`Box supports position, top, left, bottom, right 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  position: absolute;
}

<div
  className="c0"
/>
`;

exports[`Box supports position, top, left, bottom, right 2`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  top: 1rem;
}

<div
  className="c0"
/>
`;

exports[`Box supports position, top, left, bottom, right 3`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  left: 1rem;
}

<div
  className="c0"
/>
`;

exports[`Box supports position, top, left, bottom, right 4`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  right: 1rem;
}

<div
  className="c0"
/>
`;

exports[`Box supports position, top, left, bottom, right 5`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  bottom: 1rem;
}

<div
  className="c0"
/>
`;

exports[`Box supports width 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  width: 1vw;
}

<div
  className="c0"
/>
`;

exports[`Box supports width 2`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  max-width: 1vw;
}

<div
  className="c0"
/>
`;

exports[`Box supports width 3`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  min-width: 1vw;
}

<div
  className="c0"
/>
`;

exports[`Box with SizeNone is valid 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  margin-top: 0rem;
}

<div>
  <div
    className="c0"
  >
    🥑
  </div>
</div>
`;

exports[`Box with null values are removed from styling 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  margin-top: 1.25rem;
}

@media screen and (min-width:48rem) {
  .c0 {
    margin-top: 1rem;
  }
}

<div>
  <div
    className="c0"
  >
    🥑
  </div>
</div>
`;

exports[`Responsive margin top Box 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  margin-top: 1.25rem;
}

@media screen and (min-width:30rem) {
  .c0 {
    margin-top: 1rem;
  }
}

@media screen and (min-width:48rem) {
  .c0 {
    margin-top: 0.5rem;
  }
}

<div>
  <div
    className="c0"
  >
    🥑
  </div>
</div>
`;
